--- a/public/index.html
+++ b/public/index.html
@@ -50,4 +50,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T59TSCKQ76"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-T59TSCKQ76');
+  </script>
+  <!-- End Google Tag Manager -->
 </html>
